prPart2/ptucc_parser.output
Terminals unused in grammar

   DATATYPE_CASTING
   OP
   SEMICOLON


State 27 conflicts: 2 shift/reduce
State 30 conflicts: 2 shift/reduce
State 58 conflicts: 2 shift/reduce
State 64 conflicts: 2 shift/reduce
State 65 conflicts: 2 shift/reduce
State 66 conflicts: 2 shift/reduce
State 67 conflicts: 2 shift/reduce
State 68 conflicts: 2 shift/reduce
State 75 conflicts: 2 shift/reduce
State 81 conflicts: 2 shift/reduce, 1 reduce/reduce
State 82 conflicts: 2 shift/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce
State 102 conflicts: 2 shift/reduce
State 103 conflicts: 2 shift/reduce
State 104 conflicts: 2 shift/reduce
State 105 conflicts: 2 shift/reduce
State 106 conflicts: 2 shift/reduce
State 107 conflicts: 2 shift/reduce
State 108 conflicts: 2 shift/reduce
State 109 conflicts: 2 shift/reduce
State 110 conflicts: 2 shift/reduce
State 111 conflicts: 2 shift/reduce
State 112 conflicts: 2 shift/reduce
State 113 conflicts: 2 shift/reduce
State 114 conflicts: 2 shift/reduce
State 116 conflicts: 2 shift/reduce
State 119 conflicts: 2 shift/reduce
State 128 conflicts: 2 shift/reduce
State 159 conflicts: 2 shift/reduce
State 160 conflicts: 2 shift/reduce
State 164 conflicts: 2 shift/reduce
State 180 conflicts: 2 shift/reduce
State 186 conflicts: 1 shift/reduce
State 193 conflicts: 2 shift/reduce
State 194 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_decl variables proc_func_decl proc_body OP_DOT

    2 program_decl: KW_PROGRAM id OP_SEMICOLON

    3 id: IDENT

    4 pos_int: POSINT

    5 real_num: REAL

    6 Str: STRING

    7 bool_const: BOOLEAN_CONSTANT

    8 all_data_types: %empty
    9               | data_Type
   10               | array_1_or_multi_dimension

   11 array_1_or_multi_dimension: KW_ARRAY dimension KW_OF data_Type
   12                           | KW_ARRAY dimension KW_OF id

   13 dimension: %empty
   14          | OP_LEFT_BRACKET temp_type OP_RIGHT_BRACKET dimension

   15 temp_type: id
   16          | pos_int

   17 data_Type: KW_INTEGER
   18          | KW_BOOLEAN
   19          | KW_CHAR
   20          | KW_REAL

   21 proc_call: id OP_LEFT_PARENTHESIS arguments OP_RIGHT_PARENTHESIS proc_expr_type2

   22 arguments: %empty
   23          | arglist

   24 arglist: proc_expr
   25        | arglist OP_COMMA proc_expr

   26 variables: %empty
   27          | KW_VAR id variables2 OP_COLON all_data_types OP_SEMICOLON variables3 variables

   28 variables2: %empty
   29           | OP_COMMA id variables2

   30 variables3: %empty
   31           | id variables2 OP_COLON all_data_types OP_SEMICOLON variables3

   32 proc_func_decl: %empty
   33               | KW_PROC id OP_LEFT_PARENTHESIS proc_var_args OP_RIGHT_PARENTHESIS OP_SEMICOLON variables proc_func_decl proc_body OP_SEMICOLON proc_func_decl
   34               | KW_FUNCTION id OP_LEFT_PARENTHESIS proc_var_args OP_RIGHT_PARENTHESIS OP_COLON all_data_types OP_SEMICOLON variables proc_func_decl proc_body OP_SEMICOLON proc_func_decl

   35 proc_var_args: %empty
   36              | id variables2 OP_COLON all_data_types proc_var_args
   37              | id variables2 OP_COLON all_data_types OP_SEMICOLON proc_var_args
   38              | id variables2 OP_COLON all_data_types OP_SEMICOLON OP_RIGHT_PARENTHESIS proc_var_args

   39 proc_body: KW_BEGIN proc_statements KW_END

   40 proc_statements: %empty
   41                | proc_statement_list

   42 proc_statement_list: proc_statement
   43                    | proc_statement_list OP_SEMICOLON proc_statement

   44 proc_statement: command_assignment
   45               | command_result
   46               | proc_call
   47               | command_repeat
   48               | command_while
   49               | command_for
   50               | command_if
   51               | command_return
   52               | command_goto
   53               | goto_label

   54 proc_statement_2: proc_body
   55                 | proc_statement

   56 command_if: KW_IF proc_expr KW_THEN proc_statement_2
   57           | KW_IF proc_expr KW_THEN proc_statement_2 KW_ELSE proc_statement_2

   58 command_repeat: KW_REPEAT proc_statement_2 KW_UNTIL proc_expr

   59 command_while: KW_WHILE proc_expr KW_DO proc_statement_2

   60 command_goto: KW_GOTO id

   61 command_return: KW_RETURN

   62 command_assignment: id proc_expr_type3 OP_ASSIGNMENT proc_expr

   63 command_for: KW_FOR id proc_expr_type1 OP_ASSIGNMENT proc_expr KW_TO proc_expr KW_DO proc_statement_2
   64            | KW_FOR id proc_expr_type1 OP_ASSIGNMENT proc_expr KW_DOWNTO proc_expr KW_DO proc_statement_2

   65 goto_label: id OP_COLON label

   66 command_result: KW_RESULT OP_ASSIGNMENT proc_expr

   67 label: %empty
   68      | proc_body
   69      | proc_statement

   70 proc_expr: %empty
   71          | Str
   72          | pos_int
   73          | real_num
   74          | bool_const
   75          | id
   76          | OP_LEFT_PARENTHESIS proc_expr OP_RIGHT_PARENTHESIS
   77          | proc_expr OP_PLUS proc_expr
   78          | proc_expr OP_MINUS proc_expr
   79          | proc_expr OP_MULT proc_expr
   80          | proc_expr OP_DIVIDE proc_expr
   81          | proc_expr KW_DIV proc_expr
   82          | proc_expr KW_MOD proc_expr
   83          | proc_expr OP_LOGICAL_AND proc_expr
   84          | proc_expr KW_AND proc_expr
   85          | proc_expr OP_LOGICAL_OR proc_expr
   86          | proc_expr KW_OR proc_expr
   87          | proc_expr OP_EQUAL proc_expr
   88          | proc_expr OP_BIGGER proc_expr
   89          | proc_expr OP_SMALLER proc_expr
   90          | proc_expr OP_DIFFERENT proc_expr
   91          | proc_expr OP_BIGGER_EQUAL proc_expr
   92          | proc_expr OP_SMALLER_EQUAL proc_expr
   93          | OP_LOGICAL_NOT proc_expr
   94          | KW_NOT proc_expr
   95          | OP_PLUS proc_expr
   96          | OP_MINUS proc_expr
   97          | id OP_LEFT_PARENTHESIS proc_expr_type1 OP_RIGHT_PARENTHESIS proc_expr_type2
   98          | id OP_LEFT_BRACKET proc_expr OP_RIGHT_BRACKET proc_expr_type3

   99 proc_expr_type1: proc_expr
  100                | proc_expr_type1 OP_COMMA proc_expr_type1

  101 proc_expr_type2: %empty
  102                | OP_LEFT_PARENTHESIS proc_expr_type1 OP_RIGHT_PARENTHESIS proc_expr_type2

  103 proc_expr_type3: %empty
  104                | OP_LEFT_BRACKET proc_expr OP_RIGHT_BRACKET proc_expr_type3


Terminals, with rules where they appear

$end (0) 0
error (256)
KW_PROGRAM (300) 2
KW_BEGIN (301) 39
KW_END (302) 39
KW_AND (308) 84
KW_DIV (309) 81
KW_FUNCTION (310) 34
KW_MOD (311) 82
KW_PROC (312) 33
KW_RESULT (313) 66
KW_ARRAY (314) 11 12
KW_DO (315) 59 63 64
KW_GOTO (316) 60
KW_NOT (317) 94
KW_RETURN (318) 61
KW_BOOLEAN (319) 18
KW_ELSE (320) 57
KW_IF (321) 56 57
KW_OF (322) 11 12
KW_REAL (323) 20
KW_THEN (324) 56 57
KW_CHAR (325) 19
KW_FOR (326) 63 64
KW_INTEGER (327) 17
KW_OR (328) 86
KW_REPEAT (329) 58
KW_UNTIL (330) 58
KW_VAR (331) 27
KW_WHILE (332) 59
KW_TO (333) 63
KW_DOWNTO (334) 64
OP_ASSIGNMENT (336) 62 63 64 66
OP_PLUS (337) 77 95
OP_MINUS (338) 78 96
OP_MULT (339) 79
OP_DIVIDE (340) 80
OP_BIGGER (341) 88
OP_SMALLER (342) 89
OP_DIFFERENT (343) 90
OP_EQUAL (344) 87
OP_SEMICOLON (345) 2 27 31 33 34 37 38 43
OP_DOT (346) 1
OP_COMMA (347) 25 29 100
OP_COLON (348) 27 31 34 36 37 38 65
OP_SMALLER_EQUAL (349) 92
OP_BIGGER_EQUAL (351) 91
OP_LOGICAL_NOT (352) 93
OP_LOGICAL_AND (353) 83
OP_LOGICAL_OR (354) 85
OP_LEFT_PARENTHESIS (355) 21 33 34 76 97 102
OP_RIGHT_PARENTHESIS (356) 21 33 34 38 76 97 102
OP_LEFT_BRACKET (357) 14 98 104
OP_RIGHT_BRACKET (358) 14 98 104
IDENT (360) 3
POSINT (361) 4
REAL (362) 5
STRING (363) 6
BOOLEAN_CONSTANT (364) 7
DATATYPE_CASTING (365)
OP (366)
SEMICOLON (367)


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
program (64)
    on left: 1, on right: 0
program_decl (65)
    on left: 2, on right: 1
id (66)
    on left: 3, on right: 2 12 15 21 27 29 31 33 34 36 37 38 60 62
    63 64 65 75 97 98
pos_int (67)
    on left: 4, on right: 16 72
real_num (68)
    on left: 5, on right: 73
Str (69)
    on left: 6, on right: 71
bool_const (70)
    on left: 7, on right: 74
all_data_types (71)
    on left: 8 9 10, on right: 27 31 34 36 37 38
array_1_or_multi_dimension (72)
    on left: 11 12, on right: 10
dimension (73)
    on left: 13 14, on right: 11 12 14
temp_type (74)
    on left: 15 16, on right: 14
data_Type (75)
    on left: 17 18 19 20, on right: 9 11
proc_call (76)
    on left: 21, on right: 46
arguments (77)
    on left: 22 23, on right: 21
arglist (78)
    on left: 24 25, on right: 23 25
variables (79)
    on left: 26 27, on right: 1 27 33 34
variables2 (80)
    on left: 28 29, on right: 27 29 31 36 37 38
variables3 (81)
    on left: 30 31, on right: 27 31
proc_func_decl (82)
    on left: 32 33 34, on right: 1 33 34
proc_var_args (83)
    on left: 35 36 37 38, on right: 33 34 36 37 38
proc_body (84)
    on left: 39, on right: 1 33 34 54 68
proc_statements (85)
    on left: 40 41, on right: 39
proc_statement_list (86)
    on left: 42 43, on right: 41 43
proc_statement (87)
    on left: 44 45 46 47 48 49 50 51 52 53, on right: 42 43 55 69
proc_statement_2 (88)
    on left: 54 55, on right: 56 57 58 59 63 64
command_if (89)
    on left: 56 57, on right: 50
command_repeat (90)
    on left: 58, on right: 47
command_while (91)
    on left: 59, on right: 48
command_goto (92)
    on left: 60, on right: 52
command_return (93)
    on left: 61, on right: 51
command_assignment (94)
    on left: 62, on right: 44
command_for (95)
    on left: 63 64, on right: 49
goto_label (96)
    on left: 65, on right: 53
command_result (97)
    on left: 66, on right: 45
label (98)
    on left: 67 68 69, on right: 65
proc_expr (99)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91 92 93 94 95 96 97 98, on right: 24 25 56 57 58 59 62
    63 64 66 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
    94 95 96 98 99 104
proc_expr_type1 (100)
    on left: 99 100, on right: 63 64 97 100 102
proc_expr_type2 (101)
    on left: 101 102, on right: 21 97 102
proc_expr_type3 (102)
    on left: 103 104, on right: 62 98 104


State 0

    0 $accept: . program $end
    1 program: . program_decl variables proc_func_decl proc_body OP_DOT
    2 program_decl: . KW_PROGRAM id OP_SEMICOLON

    KW_PROGRAM  shift, and go to state 1

    program       go to state 2
    program_decl  go to state 3


State 1

    2 program_decl: KW_PROGRAM . id OP_SEMICOLON
    3 id: . IDENT

    IDENT  shift, and go to state 4

    id  go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: program_decl . variables proc_func_decl proc_body OP_DOT
   26 variables: . %empty  [KW_BEGIN, KW_FUNCTION, KW_PROC]
   27          | . KW_VAR id variables2 OP_COLON all_data_types OP_SEMICOLON variables3 variables

    KW_VAR  shift, and go to state 7

    $default  reduce using rule 26 (variables)

    variables  go to state 8


State 4

    3 id: IDENT .

    $default  reduce using rule 3 (id)


State 5

    2 program_decl: KW_PROGRAM id . OP_SEMICOLON

    OP_SEMICOLON  shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 id: . IDENT
   27 variables: KW_VAR . id variables2 OP_COLON all_data_types OP_SEMICOLON variables3 variables

    IDENT  shift, and go to state 4

    id  go to state 10


State 8

    1 program: program_decl variables . proc_func_decl proc_body OP_DOT
   32 proc_func_decl: . %empty  [KW_BEGIN]
   33               | . KW_PROC id OP_LEFT_PARENTHESIS proc_var_args OP_RIGHT_PARENTHESIS OP_SEMICOLON variables proc_func_decl proc_body OP_SEMICOLON proc_func_decl
   34               | . KW_FUNCTION id OP_LEFT_PARENTHESIS proc_var_args OP_RIGHT_PARENTHESIS OP_COLON all_data_types OP_SEMICOLON variables proc_func_decl proc_body OP_SEMICOLON proc_func_decl

    KW_FUNCTION  shift, and go to state 11
    KW_PROC      shift, and go to state 12

    $default  reduce using rule 32 (proc_func_decl)

    proc_func_decl  go to state 13


State 9

    2 program_decl: KW_PROGRAM id OP_SEMICOLON .

    $default  reduce using rule 2 (program_decl)


State 10

   27 variables: KW_VAR id . variables2 OP_COLON all_data_types OP_SEMICOLON variables3 variables
   28 variables2: . %empty  [OP_COLON]
   29           | . OP_COMMA id variables2

    OP_COMMA  shift, and go to state 14

    $default  reduce using rule 28 (variables2)

    variables2  go to state 15


State 11

    3 id: . IDENT
   34 proc_func_decl: KW_FUNCTION . id OP_LEFT_PARENTHESIS proc_var_args OP_RIGHT_PARENTHESIS OP_COLON all_data_types OP_SEMICOLON variables proc_func_decl proc_body OP_SEMICOLON proc_func_decl

    IDENT  shift, and go to state 4

    id  go to state 16


State 12

    3 id: . IDENT
   33 proc_func_decl: KW_PROC . id OP_LEFT_PARENTHESIS proc_var_args OP_RIGHT_PARENTHESIS OP_SEMICOLON variables proc_func_decl proc_body OP_SEMICOLON proc_func_decl

    IDENT  shift, and go to state 4

    id  go to state 17


State 13

    1 program: program_decl variables proc_func_decl . proc_body OP_DOT
   39 proc_body: . KW_BEGIN proc_statements KW_END

    KW_BEGIN  shift, and go to state 18

    proc_body  go to state 19


State 14

    3 id: . IDENT
   29 variables2: OP_COMMA . id variables2

    IDENT  shift, and go to state 4

    id  go to state 20


State 15

   27 variables: KW_VAR id variables2 . OP_COLON all_data_types OP_SEMICOLON variables3 variables

    OP_COLON  shift, and go to state 21


State 16

   34 proc_func_decl: KW_FUNCTION id . OP_LEFT_PARENTHESIS proc_var_args OP_RIGHT_PARENTHESIS OP_COLON all_data_types OP_SEMICOLON variables proc_func_decl proc_body OP_SEMICOLON proc_func_decl

    OP_LEFT_PARENTHESIS  shift, and go to state 22


State 17

   33 proc_func_decl: KW_PROC id . OP_LEFT_PARENTHESIS proc_var_args OP_RIGHT_PARENTHESIS OP_SEMICOLON variables proc_func_decl proc_body OP_SEMICOLON proc_func_decl

    OP_LEFT_PARENTHESIS  shift, and go to state 23


State 18

    3 id: . IDENT
   21 proc_call: . id OP_LEFT_PARENTHESIS arguments OP_RIGHT_PARENTHESIS proc_expr_type2
   39 proc_body: KW_BEGIN . proc_statements KW_END
   40 proc_statements: . %empty  [KW_END]
   41                | . proc_statement_list
   42 proc_statement_list: . proc_statement
   43                    | . proc_statement_list OP_SEMICOLON proc_statement
   44 proc_statement: . command_assignment
   45               | . command_result
   46               | . proc_call
   47               | . command_repeat
   48               | . command_while
   49               | . command_for
   50               | . command_if
   51               | . command_return
   52               | . command_goto
   53               | . goto_label
   56 command_if: . KW_IF proc_expr KW_THEN proc_statement_2
   57           | . KW_IF proc_expr KW_THEN proc_statement_2 KW_ELSE proc_statement_2
   58 command_repeat: . KW_REPEAT proc_statement_2 KW_UNTIL proc_expr
   59 command_while: . KW_WHILE proc_expr KW_DO proc_statement_2
   60 command_goto: . KW_GOTO id
   61 command_return: . KW_RETURN
   62 command_assignment: . id proc_expr_type3 OP_ASSIGNMENT proc_expr
   63 command_for: . KW_FOR id proc_expr_type1 OP_ASSIGNMENT proc_expr KW_TO proc_expr KW_DO proc_statement_2
   64            | . KW_FOR id proc_expr_type1 OP_ASSIGNMENT proc_expr KW_DOWNTO proc_expr KW_DO proc_statement_2
   65 goto_label: . id OP_COLON label
   66 command_result: . KW_RESULT OP_ASSIGNMENT proc_expr

    IDENT      shift, and go to state 4
    KW_RESULT  shift, and go to state 24
    KW_GOTO    shift, and go to state 25
    KW_RETURN  shift, and go to state 26
    KW_IF      shift, and go to state 27
    KW_FOR     shift, and go to state 28
    KW_REPEAT  shift, and go to state 29
    KW_WHILE   shift, and go to state 30

    $default  reduce using rule 40 (proc_statements)

    id                   go to state 31
    proc_call            go to state 32
    proc_statements      go to state 33
    proc_statement_list  go to state 34
    proc_statement       go to state 35
    command_if           go to state 36
    command_repeat       go to state 37
    command_while        go to state 38
    command_goto         go to state 39
    command_return       go to state 40
    command_assignment   go to state 41
    command_for          go to state 42
    goto_label           go to state 43
    command_result       go to state 44


State 19

    1 program: program_decl variables proc_func_decl proc_body . OP_DOT

    OP_DOT  shift, and go to state 45


State 20

   28 variables2: . %empty  [OP_COLON]
   29           | . OP_COMMA id variables2
   29           | OP_COMMA id . variables2

    OP_COMMA  shift, and go to state 14

    $default  reduce using rule 28 (variables2)

    variables2  go to state 46


State 21

    8 all_data_types: . %empty  [OP_SEMICOLON]
    9               | . data_Type
   10               | . array_1_or_multi_dimension
   11 array_1_or_multi_dimension: . KW_ARRAY dimension KW_OF data_Type
   12                           | . KW_ARRAY dimension KW_OF id
   17 data_Type: . KW_INTEGER
   18          | . KW_BOOLEAN
   19          | . KW_CHAR
   20          | . KW_REAL
   27 variables: KW_VAR id variables2 OP_COLON . all_data_types OP_SEMICOLON variables3 variables

    KW_ARRAY    shift, and go to state 47
    KW_BOOLEAN  shift, and go to state 48
    KW_REAL     shift, and go to state 49
    KW_CHAR     shift, and go to state 50
    KW_INTEGER  shift, and go to state 51

    $default  reduce using rule 8 (all_data_types)

    all_data_types              go to state 52
    array_1_or_multi_dimension  go to state 53
    data_Type                   go to state 54


State 22
